--- a/index.html
+++ b/index.html
@@ -3,9 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Actividad 3</title>
 </head>
 <body>
-    <h1>Hola</h1>
+    <div style="display: flex; justify-content: space-between; align-items: center;">
+    <h1>Actividad Sant Josep obrer</h1>
+
+    <img src="./assets/logoSJO.png" alt="Logo SJO" width="200px" height="200px">
+</div>
+    <h2 style="color: rgb(107, 103, 103);">T03 - Inserció de imatges, enllaços, taules i formularis</h2>
+    <table border="1">
+        <tr>
+            <td>Asignaturas</td>
+            <td>Horario</td>
+            <td>Tareas a entregar</td>
+        </tr>
+        <tr>
+            <td>Lenguage de marcas </td>
+            <td>15:05/16:50</td>
+            <td><a href="./AcctividadLenguajes/">TO3 - Insercion de imagenes, enlaces, tablas y formularios</a></td>
+        </tr>
+        <tr>
+            <td>Entorno de desarrollo </td>
+            <td>16:50/17:45</td>
+            <td>Script que te permite resolver sudoku 3x3</td>
+        </tr>
+        <tr>
+            <td>Programacion </td>
+            <td>18:05/19:55</td>
+            <td>Actividades de condicionales</td>
+        </tr>
+        <tr>
+            <td>Base de datos </td>
+            <td>19:55/21:45</td>
+            <td>Explicacion</td>
+        </tr>
+    </table>
+    <p><a href="Gato/">Gato</a></p>
 </body>
 </html>
