--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <tr>
             <td>Lenguage de marcas </td>
             <td>15:05/16:50</td>
-            <td><a href="./AcctividadLenguajes/">TO3 -Insercion de imagenes, enlaces, tablas y formularios</a></td>
+            <td><a href="./AcctividadLenguajes/index.html">TO3 -Insercion de imagenes, enlaces, tablas y formularios</a></td>
         </tr>
         <tr>
             <td>Entorno de desarrollo </td>
